Cleanup RegionReflectionUtils.
* Fix Class.newInstance usage as it's deprecated.
* Change formatter to eclipse standard as the referenced profile is not
existing
* Use multicatch
* Use varargs

Change-Id: Icacbcd83f66529bcdf8cba2b4ec85e8e717a69a3
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>